# rates-carry-optimizer

./: README.md  config.yaml  main.py  pyproject.py  pyproject.toml  requirements.txt
docs/: METHODS.md
notebooks/: day_2_curve_comparison.ipynb
src/: treasury.py
src/alpha/: carry_roll.py
src/curves/: yield_curve.py  zero_curve.py
src/data/: treasury.py
src/optimize/: optimizer.py
src/pricing/: bond.py
src/rates_carry_optimizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/risk/: krd.py
tests/: test_imports.py  test_yield_curve.py
